Remove some Java 1.5 dependencies from the new metrics code.
git-svn-id: https://svn.apache.org/repos/asf/lucene/hadoop/trunk@397269 13f79535-47bb-0310-9956-ffa450edef68